feat: Improve SEO and enhance navigation experience
- Implement comprehensive SEO metadata for better search engine visibility.
- Add Open Graph meta tags and image for rich social media sharing.
- Integrate Schema.org JSON-LD to provide structured data for search engines.
- Develop an active navigation indicator that highlights the current section.
- Refactor Navbar component to support dynamic link rendering and active state.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,41 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Shivam Bhosle</title>
+    
+    <title>Shivam Bhosle | AI/ML Engineer & Software Developer</title>
+    <meta name="title" content="Shivam Bhosle | AI/ML Engineer & Software Developer" />
+    <meta name="description" content="Portfolio of Shivam Bhosle, an MSCS (AI) student at USC specializing in Artificial Intelligence, Machine Learning, and Full Stack Software Development." />
+    <meta name="keywords" content="Shivam Bhosle, AI Engineer, ML Engineer, Software Developer, USC, MSCS AI, Portfolio, Machine Learning" />
+    <meta name="author" content="Shivam Bhosle" />
+    <link rel="canonical" href="https://shivambhosle.vercel.app/" />
+
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://shivambhosle.vercel.app/" />
+    <meta property="og:title" content="Shivam Bhosle | AI/ML Engineer & Software Developer" />
+    <meta property="og:description" content="Portfolio of Shivam Bhosle, an MSCS (AI) student at USC specializing in Artificial Intelligence, Machine Learning, and Full Stack Software Development." />
+    <meta property="og:image" content="https://shivambhosle.vercel.app/og-image.png" />
+
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Person",
+      "name": "Shivam Bhosle",
+      "url": "https://shivambhosle.vercel.app/",
+      "jobTitle": "AI/ML Engineer & Software Developer",
+      "alumniOf": {
+        "@type": "CollegeOrUniversity",
+        "name": "University of Southern California"
+      },
+      "description": "MSCS (AI) student at USC focused on AI/ML and Software Engineering.",
+      "sameAs": [
+        "https://github.com/007-Shivam",
+        "https://www.linkedin.com/in/shivambhosle007/",
+        "https://www.instagram.com/shivam__2709",
+        "https://leetcode.com/u/Shivam__007/"
+      ]
+    }
+    </script>
+
   </head>
   <body>
     <div id="root"></div>
